test/tests/stages/5_local_variables/valid/assign.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[17]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(var0)
  ;
  identifier(var0)
  =
  const int(2)
  ;
  return
  identifier(var0)
  ;
  }
