test/tests/stages/5_local_variables/invalid_semantics/extra_credit/postfix_decr_non_lvalue.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[17]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(10)
  ;
  return
  identifier(a)
  ++
  --
  ;
  }
